--- a/templates/chapter.gohtml
+++ b/templates/chapter.gohtml
@@ -1,5 +1,3 @@
-{{define "staticPath"}}../../../static{{end}}
-
 {{define "title"}}MangaThorg - {{.Manga}} Chapter {{.ChapterNb}}{{end}}
 
 {{define "cssFile"}}miscellaneous{{end}}
@@ -58,7 +56,7 @@
                     <div class="div">404</div>
                 </div>
             </div>
-            <div class="error-img" style="background-image: url('http://localhost:8080/static/img/error-img.png')"></div>
+            <div class="error-img" style="background-image: url('/static/img/error-img.png')"></div>
             <div class="error-info"><p class="p">We didn’t find the scans you were looking for...</p></div>
         </div>
     {{end}}
