--- a/templates/confirm.gohtml
+++ b/templates/confirm.gohtml
@@ -1,5 +1,3 @@
-{{define "staticPath"}}http://localhost:8080/static{{end}}
-
 {{define "title"}}MangaThorg - Account Confirmed{{end}}
 
 {{define "cssFile"}}miscellaneous{{end}}
@@ -15,7 +13,7 @@
                 <a href="/login" class="confirm-btn">Sign in</a>
             </div>
         </div>
-        <div class="confirm-img"><img src="http://localhost:8080/static/img/confirm-img.png" alt="confirm-img" /></div>
+        <div class="confirm-img"><img src="/static/img/confirm-img.png" alt="confirm-img" /></div>
         <div class="confirm-info"><span class="txt-1">Account</span><span class="txt-2">enabled</span></div>
     </div>
 
