--- a/templates/error404.gohtml
+++ b/templates/error404.gohtml
@@ -1,5 +1,3 @@
-{{define "staticPath"}}http://localhost:8080/static{{end}}
-
 {{define "title"}}MangaThorg - Sorry{{end}}
 
 {{define "cssFile"}}miscellaneous{{end}}
@@ -13,7 +11,7 @@
             <div class="div">404</div>
         </div>
     </div>
-    <div class="error-img" style="background-image: url('http://localhost:8080/static/img/error-img.png')"></div>
+    <div class="error-img" style="background-image: url('/static/img/error-img.png')"></div>
     <div class="error-info"><p class="p">We didn’t find what you were looking for...</p></div>
 </div>
 
