--- a/templates/category.gohtml
+++ b/templates/category.gohtml
@@ -1,5 +1,3 @@
-{{define "staticPath"}}{{.Path}}{{end}}
-
 {{define "title"}}MangaThorg - {{.Name}}{{end}}
 
 {{define "cssFile"}}style{{end}}
@@ -69,5 +67,7 @@
         {{end}}
     </div>
 
-    <script src="{{.Path}}/js/favorites.js"></script>
+    <script>
+        {{ template "favorites.js" . }}
+    </script>
 {{end}}
