--- a/templates/creation-mail.gohtml
+++ b/templates/creation-mail.gohtml
@@ -88,7 +88,7 @@
     </header>
     <div class="greeting"><span>Hello </span><span class="name">{{.Username}}</span><span>!</span></div><br/><br/>
     <div class="msg"><span>Please follow the link to finish setting your newly created account:</span></div>
-    <div class="link-ctn"><a class="link" href="http://localhost:8080/confirm?id={{.ConfirmID}}">Confirm your email</a></div><br/>
+    <div class="link-ctn"><a class="link" href="{{ .BaseURL }}/confirm?id={{.ConfirmID}}">Confirm your email</a></div><br/>
     <div class="info-ctn"><p>If you didn't initiate this process, don't click on the link, and your unverified account will be deleted tomorrow at noon (Paris timezone)</p></div>
     <footer>
         <div>
