--- a/templates/header-line2.gohtml
+++ b/templates/header-line2.gohtml
@@ -7,7 +7,7 @@
                 <div class="filler"></div>
                 <a href="/home" class="username-ctn"><div class="username-txt">{{.Username}}</div></a>
                 <div class="filler"></div>
-                <a href="/home" class="profile-avatar"><img src="{{template "staticPath" .}}/img/profile-avatars/{{.AvatarImg}}" alt="avatar-img" class="avatar-img"></a>
+                <a href="/home" class="profile-avatar"><img src="/static/img/profile-avatars/{{.AvatarImg}}" alt="avatar-img" class="avatar-img"></a>
             </div>
             <a href="/logout" class="logout-btn"><span class="header-btn-text">Logout</span></a>
         </div>
@@ -20,9 +20,9 @@
                 <a href="/register" class="register-btn"><div class="header-btn-text">Register</div></a>
             </div>
             <div class="header-msg">
-                <img class="line-top" src="{{template "staticPath" .}}/img/line-1-1.svg" alt="line" />
+                <img class="line-top" src="/static/img/line-1-1.svg" alt="line" />
                 <a href="/login" class="invitation-msg">Sign in to have all features available</a>
-                <img class="line-bottom" src="{{template "staticPath" .}}/img/line-2-1.svg" alt="line" />
+                <img class="line-bottom" src="/static/img/line-2-1.svg" alt="line" />
             </div>
             <div class="filler"></div>
         </div>
