--- a/templates/new-password-mail.gohtml
+++ b/templates/new-password-mail.gohtml
@@ -87,7 +87,7 @@
 </header>
 <div class="greeting"><span>Hello </span><span class="name">{{.Username}}</span><span>!</span></div><br/><br/>
 <div class="msg"><span>Please follow the link to set a new password</span></div>
-<div class="link-ctn"><a class="link" href="http://localhost:8080/update-credentials?id={{.ConfirmID}}">Set a new password</a></div><br/>
+<div class="link-ctn"><a class="link" href="{{ .BaseURL }}/update-credentials?id={{.ConfirmID}}">Set a new password</a></div><br/>
 <div class="info-ctn"><p>If you didn't initiate this process, don't click on the link, and your password will not be changed. This link will be disabled tomorrow at 14:00 or 2:00 (Paris timezone)</p></div>
 <footer>
     <div>
