--- a/templates/principal.gohtml
+++ b/templates/principal.gohtml
@@ -1,5 +1,3 @@
-{{define "staticPath"}}static{{end}}
-
 {{define "title"}}MangaThorg - Principal{{end}}
 
 {{define "cssFile"}}style{{end}}
@@ -99,5 +97,8 @@
     {{end}}
   </div>
 </div>
-  <script src="static/js/favorites.js"></script>
+
+  <script>
+      {{ template "favorites.js" . }}
+  </script>
 {{end}}
